--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">IT Development</p>
+                <p class="masthead-subheading font-weight-light mb-0">IT DevelopmentSSS</p>
             </div>
         </header>
 
